introduccion y estado del arte

--- a/1_introduction/0_index.tex
+++ b/1_introduction/0_index.tex
@@ -6,8 +6,8 @@
 
 
 \begin{savequote}[50mm]
-The beginning is the most important part of the work. 
-\qauthor{Plato}
+Las competencias, las tareas y su evaluación son los pilares en los que se basa el nuevo currículum universitario. 
+\qauthor{Zabala}
 \end{savequote}
 
 \chapter{Introducción}
@@ -23,15 +23,31 @@ The beginning is the most important part of the work.
 
 %------------------------------------------------------------------------- 
 
-La universidad es una institución impulsora de los cambios de todo tipo a los que la sociedad actual debe hacer frente. En el contexto del Espacio Europeo de Educación Superior~\footnote{http://www.eees.es/} e influenciado por la situación  actual de  la sociedad, sus instituciones sociales y políticas, la universidad se encuentra en el foco de las reformas para alcanzar la convergencia a nivel europeo. Bajo estas premisas, las competencias, las tareas y su evaluación se sitúan como los ejes del currículum universitario ~\cite{zabala2005espacio}.
+El papel de la universidad como institución impulsora de los cambios de todo tipo a los que la sociedad actual debe hacer frente es fundamental. En el contexto del Espacio Europeo de Educación Superior~\footnote{http://www.eees.es/} e influenciado por la situación actual de  la sociedad, sus instituciones sociales y políticas, la universidad se encuentra en el foco de las reformas para alcanzar la convergencia a nivel europeo. En este marco, son las competencias, las tareas y su evaluación los pilares en los que se basa el nuevo currículum universitario ~\cite{zabala2005espacio}.
 
 Para que la empleabilidad de los graduados satisfaga las necesidades de Europa, el enfoque de las competencias juega un papel fundamental en este nuevo paradigma  ~\cite{communique2012making}. Los graduados deben adquirir y demostrar competencias genéricas, así como estar al día con el conocimiento específico de la materia a fin de ser capaces de satisfacer las necesidades de la sociedad y el mercado laboral.
 
-En este contexto es fundamental el concepto de competencias como base para los resultados de aprendizaje. Las competencias representan una combinación dinámica de conocimientos, comprensión, habilidades y capacidades. El fomento de las competencias es el objetivo de los programas educativos, debiendo éstas ser desarrolladas en viarias unidades del curso y evaluadas en diferentes etapas ~\footnote{http://www.unideusto.org/tuningeu/competences.html}.
+Por tanto, podemos decir que el interés en la evaluación del aprendizaje ha cambiado del conocimiento a las competencias.
+Proyectos como el \emph{Tuning Educational Structures in Europe}, apoyado por el Lifelong Learning Program de la Unión Europea, muestran la importancia de utilizar el concepto de competencia como base para los resultados de aprendizaje. Las competencias de aprendizaje son habilidades que un alumno ha de ser capaz de demostrar una vez que termina su formación. Estas competencias de aprendizaje se dividen en dos grupos: específicas y genéricas. Competencias específicas son aquellas relacionadas directamente con la utilización de conceptos, teorías o habilidades propias de un área en concreto, mientras que las competencias genéricas son habilidades, capacidades y conocimientos que cualquier estudiante debería desarrollar independientemente de su área de estudio \cite{gonzalez2003tuning}. Aunque obviamente sigue siendo muy importante el desarrollo del conocimiento específico de cada área de estudio, es un hecho que el tiempo y la atención también deben dedicarse al desarrollo de las competencias genéricas. Igualmente es importante reconocer la aplicación de dichas habilidades genéricas fuera del ámbito académico, ya que son cada vez más relevantes para la preparación de estudiantes para su futuro papel en la sociedad, en términos de empleabilidad y ciudadanía.
 
-Las competencias se dividen en específicas y genéricas.
+Sin embargo, evaluar ciertas competencias genéricas es a menudo una tarea bastante subjetiva, lo que es problemático tanto para el profesor como para los alumnos. A menos que una competencia genérica esté directamente enlazada a una actividad específica, éstas son difíciles de evaluar. Desarrollar un procedimiento detallado para la evaluación en el desempeño de los estudiantes en las competencias genéricas es una actividad compleja y que requiere mucho tiempo por los diferentes aspectos a tener en cuenta. Si el profesor apenas tiene tiempo suficiente durante el curso académico para cumplir su planificación y evaluar todas las tareas, exámenes o trabajos que los alumnos han tenido que realizar para demostrar la adquisición de competencias específicas en una asignatura, difícilmente podrá asumir la carga adicional que supone una evaluación detallada, objetiva y justificada de determinadas competencias genéricas. Por lo que, aunque un alumno haya superado una asignatura, no siempre se podría garantizar que éste sea capaz de desempeñar las competencias genéricas recogidas en su plan de estudios.
 
-% Correo Juanma 15 enero: La parte original de la tesis de Antonio es el DSL, que mapea las queries de evaluación a queries sobre la BD del sistema de información que recoge evidencias, para "explorar" posibilidades de fórmulas/métodos con que expresar la evaluación de competencias, expresadas en ese DSL.
+Debido a la rápida transformación de una sociedad que se basa en el conocimiento y a los sistemas de educación, vivimos en un contexto donde las habilidades demandadas son cambiantes. Cada vez es más evidente que los planes de estudio, y con ellos las estrategias de evaluación, deben centrarse en un enfoque más integral de las competencias genéricas y específicas. Las TIC ofrecen muchas oportunidades para el apoyo a los formatos de evaluación que pueden capturar habilidades complejas y competencias que son difíciles de evaluar \cite{Redecker:2013}. Si los planes de estudio y los objetivos de aprendizaje han cambiado, también deberían hacerlo las prácticas de evaluación \cite{Cachia:2011}.
+
+El ámbito de nuestro trabajo está relacionado con los entornos de aprendizaje virtual: \emph{LMS} y \emph{VLE} (\emph{LMS}, \emph{Learning Management System} y \emph{VLE}, \emph{Virtual Learning Environment}). Los entornos LMS o VLE pueden ser tanto entornos monolíticos y holísticos donde se desarrollan y gestionan experiencias virtuales, como ser un entorno basado en las tecnologías semánticas y \emph{linked data}, y estar constituidos por una miríada de herramientas, plataformas y servicios independientes \cite{Dodero:2013}. Estos entornos están diseñados especialmente para incluir no sólo tareas individuales, sino también tareas colaborativas como foros o wikis. \emph{Un foro es una aplicación web que da soporte a discusiones u opiniones en línea} (Wikipedia), mientras que \emph{un wiki es un tipo de página web que brinda la posibilidad de que multitud de usuarios puedan editar sus contenidos a través del navegador web, con ciertas restricciones mínimas} (Wikipedia). Todos ellos son muy empleados como soporte para clases presenciales, haciendo más fácil la comunicación con los estudiantes y manteniendo siempre disponibles las actividades y recursos para el tema \cite{Zafra:2011, Munkhchimeg:2013}. Además, son ampliamente utilizados hoy en día por los centros educativos a todos los niveles, facilitando la descontextualización y fomentando en muchos casos una motivación extra del estudiante mediante un juego (GBL) con un posible componente competitivo \cite{Bellotti:2013,Berns:2013,Palomo-Duarte:2012}.
+
+Cuando el número de alumnos es elevado, se hace mucho menos escalable la evaluación para el profesor. Por ejemplo, este tipo de situaciones se suele dar en los \emph{MOOCs} (Massive Open Online Courses), cuya filosofía es la liberación del conocimiento, para que este llegue a un público más amplio, y para el que se suelen ofrecer plazas ilimitadas \cite{Lugton:2012, Mor:2013}. Este tipo de curso, que también se caracteriza por ser de carácter abierto y gratuito, y con materiales accesibles de forma gratuita, presenta evidentes problemas de escalabilidad cuando la evaluación no está automatizada \cite{Johnson:2013}.
+
+En los LMS, cada archivo subido, cada actividad realizada, cada acceso al sistema o cada comentario escrito en un foro por los estudiantes queda registrado en el sistema. Según \cite{Chebil:2012, Florian:2011} la recopilación de los rastros de interacción producidos por estos entornos \emph{TEL} (Technology Enhanced Learning), aunque con su correspondiente filtrado, puede ser una información muy valiosa para obtener indicadores del desempeño de los alumnos en competencias genéricas.
+
+%El enfoque de este trabajo se centra en los LMS. En ellos cada archivo, cada acceso o cada tarea hecha por un estudiante queda registrado en el sistema. Los investigadores utilizan a menudo el registro de interacción de los alumnos con el sistema para responder a diferentes cuestiones de investigación relacionadas con los procesos de adquisición del conocimiento, el diseño de escenarios pedagógicos o para analizar la usabilidad de las herramientas ~\cite{Chebil:2012}. Los modelos basados en la actividad del alumno pueden proporcionar evidencias para la evaluación de competencias. Sin embargo, la información de registro que el profesor puede obtener del LMS necesita ser procesada antes de poder ser utilizada ~\cite{Florian:2011}.
+
+Este trabajo comienza con un análisis de la literatura para conocer hasta qué punto la ciencia informática se ha ocupado de la evaluación de competencias genéricas, prestando especial atención en aquellos trabajos que realicen dicha evaluación de manera automatizada aprovechando las prestaciones de las nuevas tecnologías. Consideramos que la información almacenada en la base de datos de un LMS puede ser aprovechada para extraer indicadores que proporcionen una medida objetiva del desempeño de los alumnos en ciertas competencias genéricas. ¿Cuántos trabajos han tratado esta problemática anteriormente? ¿Qué competencias pueden ser evaluadas de manera automática? Todas estas dudas, serán planteadas de manera formal en en el siguiente capítulo, dónde se darán las indicaciones de la metodología seguida. A continuación se mostrarán los resultados, las respuestas a las preguntas, el trabajo futuro y por último las conclusiones y la bibliografía utilizada.
+
+Para este trabajo vamos a utilizar un DSL para recoger evidencias que podamos utilizar para la evaluación de competencias.
+
+ % Correo Juanma 15 enero: La parte original de la tesis de Antonio es el DSL, que mapea las queries de evaluación a queries sobre la BD del sistema de información que recoge evidencias, para "explorar" posibilidades de fórmulas/métodos con que expresar la evaluación de competencias, expresadas en ese DSL.
+
 
 
 
