--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -16,6 +16,202 @@
   year={2012}
 }
 
+@book{gonzalez2003tuning,
+  title={Tuning educational structures in Europe},
+  author={Gonz{\'a}lez, Julia and Wagenaar, Robert and others},
+  year={2003},
+  publisher={University of Deusto Final report. Phase one. Bilbao}
+}
+
+@inproceedings{Chebil:2012,
+        author={Chebil,H. and Girardot,J. and Courtin,C.},
+        editor={ },
+        year={2012},
+        title={An ontology-based approach for sharing and analyzing learning trace corpora},
+        booktitle={Proceedings - IEEE 6th International Conference on Semantic Computing, ICSC 2012},
+        pages={101-108},
+        url={www.scopus.com},
+}
+
+@book{Florian:2011,
+        author={Florian,B. and Glahn,C. and Drachsler,H. and Specht,M. and Fabregat Gesa,R.},
+        year={2011},
+        title={Activity-based learner-models for learner monitoring and recommendations in moodle},
+        series={Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+        volume={6964 LNCS},
+        pages={111-124},
+        publisher={Springer Berlin Heidelberg}
+}
+
+@article {Redecker:2013,
+author = {Redecker, Christine and Johannessen, Øystein},
+title = {{Changing Assessment — Towards a New Assessment Paradigm Using ICT}},
+journal = {European Journal of Education},
+volume = {48},
+number = {1},
+pages = {79--96},
+year = {2013},
+}
+
+@book{Cachia:2011,
+  title={Creative Learning and Innovative Teaching: Final Report on the Study on Creativity and Innovation in Education in the EU Member States},
+  author={Cachia R. and Ferrari A. and Ala-Mutka K. and Punie Y},
+  year={2011},
+  publisher={Dictus Publishing}
+}
+
+@inproceedings{Dodero:2013,
+        author={Dodero,J. M. and Palomo-Duarte,M. and Ruiz-Rube,I. and Traverso,I. and Mota,J. M.},
+        year={2013},
+        title={{ASCETA: Accesibilidad a servicios y contenidos educativos mediante tecnologías del aprendizaje}},
+        booktitle={{XV Simposio Internacional de Tecnologías de la Información y las Comunicaciones en la Educación}},
+        pages={116--120}
+}
+
+@inproceedings{Zafra:2011, 
+author={Zafra, A. and Gibaja, E. and Luque, M. and Ventura, S.}, 
+booktitle={Next Generation Web Services Practices (NWeSP), 2011 7th International Conference on}, 
+title={An evaluation of the effectiveness of e-learning system as support for traditional classes}, 
+year={2011}, 
+pages={431-435}
+}
+
+@inproceedings{Munkhchimeg:2013, 
+author={Munkhchimeg, B. and Baigaltugs, S.}, 
+booktitle={Strategic Technology (IFOST), 2013 8th International Forum on}, 
+title={Control possibility of students' learning process through using Learning Management System}, 
+year={2013}, 
+volume={2}, 
+pages={395-399}
+}
+
+@article{Bellotti:2013,
+ author = {Bellotti, Francesco and Kapralos, Bill and Lee, Kiju and Moreno-Ger, Pablo and Berta, Riccardo},
+ title = {Assessment in and of Serious Games: An Overview},
+ journal = {Advances in Human-Computer Interaction - Special issue on User Assessment in Serious Games and Technology-Enhanced},
+ issue_date = {January 2013},
+ volume = {2013},
+ month = jan,
+ year = {2013},
+ issn = {1687-5893},
+ pages = {1:1--1:1},
+ articleno = {1},
+ numpages = {1},
+ url = {http://dx.doi.org/10.1155/2013/136864},
+ doi = {10.1155/2013/136864},
+ acmid = {2484486},
+ publisher = {Hindawi Publishing Corp.},
+ address = {New York, NY, United States},
+} 
+
+@article{Berns:2013,
+ author = {Berns, Anke and Gonzalez-Pardo, Antonio and Camacho, David},
+ title = {Game-like Language Learning in 3-D Virtual Environments},
+ journal = {Computers \& Education},
+ issue_date = {January, 2013},
+ volume = {60},
+ number = {1},
+ month = jan,
+ year = {2013},
+ issn = {0360-1315},
+ pages = {210--220},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1016/j.compedu.2012.07.001},
+ doi = {10.1016/j.compedu.2012.07.001},
+ acmid = {2397273},
+ publisher = {Elsevier Science Ltd.},
+ address = {Oxford, UK, UK},
+ keywords = {Foreign language learning, Game-like applications, Motivation in education, OpenSim, Virtual worlds},
+} 
+
+@inproceedings{Palomo-Duarte:2012,
+ author = {Palomo-Duarte, Manuel and Dodero, Juan Manuel and Tocino, Jos{\'e} Tom\'{a}s and Garc\'{\i}a-Dom\'{\i}nguez, Antonio and Balderas, Antonio},
+ title = {Competitive Evaluation in a Video Game Development Course},
+ booktitle = {Proceedings of the 17th ACM Annual Conference on Innovation and Technology in Computer Science Education},
+ series = {ITiCSE '12},
+ year = {2012},
+ isbn = {978-1-4503-1246-2},
+ location = {Haifa, Israel},
+ pages = {321--326},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2325296.2325371},
+ doi = {10.1145/2325296.2325371},
+ acmid = {2325371},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {artificial intelligence, competition, expert system programming, video game development},
+}
+
+@article{Mor:2013,
+author = {Mor, Yishay and Koshinen, Tapio},
+journal = {eLearning Papers},
+pages = {1--7},
+title = {{MOOC y m\'{a}s all\'{a}}},
+url = {http://elearningeuropa.info/es/paper/mooc-y-m-s-all},
+volume = {33},
+year = {2013}
+}
+
+@misc{Lugton:2012,
+author = {Lugton, Martin},
+booktitle = {Reflections},
+title = {{What is a MOOC? What are the different types of MOOC? xMOOCs and cMOOCs}},
+url = {http://reflectionsandcontemplations.wordpress.com/2012/08/23/what-is-a-mooc-what-are-the-different-types-of-mooc-xmoocs-and-cmoocs/},
+year = {2012}
+}
+
+@inproceedings{Johnson:2013, 
+author={Johnson, D.H.}, 
+booktitle={Digital Signal Processing and Signal Processing Education Meeting (DSP/SPE), 2013 IEEE}, 
+title={Teaching a ``mooc:`` Experiences from the front line}, 
+year={2013}, 
+pages={268-272}
+}
+
+@inproceedings{Wenjun:2008, 
+author={Wenjun Wu and Papka, M.E. and Stevens, R.}, 
+booktitle={Grid Computing Environments Workshop, 2008. GCE '08}, 
+title={Toward an OpenSocial Life Science Gateway}, 
+year={2008}, 
+pages={1-6}
+}
+
+@article{Wieringa:2005,
+ author = {Wieringa, Roel and Maiden, Neil and Mead, Nancy and Rolland, Colette},
+ title = {Requirements Engineering Paper Classification and Evaluation Criteria: A Proposal and a Discussion},
+ journal = {Requirements Engineering},
+ issue_date = {December 2005},
+ volume = {11},
+ number = {1},
+ month = dec,
+ year = {2005},
+ issn = {0947-3602},
+ pages = {102--107}
+} 
+
+@article{Hevner:2004,
+ author = {Hevner, Alan R. and March, Salvatore T. and Park, Jinsoo and Ram, Sudha},
+ title = {Design Science in Information Systems Research},
+ journal = {MIS Quarterly},
+ issue_date = {March 2004},
+ volume = {28},
+ number = {1},
+ month = mar,
+ year = {2004},
+ issn = {0276-7783},
+ pages = {75--105}
+} 
+
+@incollection{Petersen:2012,
+author = {Petersen, Sobah A. and Bedek, Michael A.},
+booktitle = {Serious Games Development and Applications},
+month = jan,
+pages = {219--230},
+publisher = {Springer Berlin Heidelberg},
+title = {{Challenges and Opportunities in Evaluating Learning in Serious Games: A Look at Behavioural Aspects}},
+year = {2012}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
