--- a/4_experiments_and_results/0_index.tex
+++ b/4_experiments_and_results/0_index.tex
@@ -9,7 +9,7 @@ The logic of validation allows us to move between the two limits of dogmatism an
 \end{savequote}
 
 
-\chapter{Validation of the methodology}
+\chapter{Evaluación}
 \label{cha:Validation of the methodology}
 
 % the code below specifies where the figures are stored
