--- a/5_conclusion/0_index.tex
+++ b/5_conclusion/0_index.tex
@@ -9,7 +9,7 @@ Now this is not the end. It is not even the beginning of the end. But it is, per
 \end{savequote}
 
 
-\chapter{Conclusions}
+\chapter{Conclusiones y trabajo futuro}
 \label{cha:Conclusions}
 
 % the code below specifies where the figures are stored
