--- a/3_overall_methodology/0_index.tex
+++ b/3_overall_methodology/0_index.tex
@@ -9,7 +9,7 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 \end{savequote}
 
 
-\chapter{Overall methodology}
+\chapter{Diseño y desarrollo de la metodología para la evaluación de competencias genéricas}
 \label{cha:Overall methodology}
 
 % the code below specifies where the figures are stored
