Estructura pre reunion

--- a/3_overall_methodology/0_index.tex
+++ b/3_overall_methodology/0_index.tex
@@ -24,7 +24,7 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 
 \cite{turing1950computing}
 
-Este capítulo presenta los requisitos, diseño y desarrollo de los sistemas empleados para guiar la evaluación de competencias genéricas: EvalCourse, AMW y EvalSim.
+Este capítulo presenta los requisitos, diseño y desarrollo de los sistemas empleados para guiar la evaluación de competencias genéricas: EvalCourse y EvalSim.
 
 % Tengo que estudiar esta división. EvalCourse y EvalSim son DSLs para LMS y Mundos virtuales respectivamente. AMW es un sistema para escalar la evaluación del trabajo en Wikis mediante la peer y autoevaluación.
 
@@ -34,14 +34,21 @@ Este capítulo presenta los requisitos, diseño y desarrollo de los sistemas emp
 % Organizational Learning
 
 % AMW no es una pata como tal. ¿Se queda fuera por tanto?
+\section{EvalCourse}
 
-\section{Requisitos}
+\subsection{Requisitos}
 
-\section{Diseño}
+\subsection{Diseño}
 
-\section{Implementación}
+\subsection{Implementación}
 
+\section{EvalSim}
 
+\subsection{Requisitos}
+
+\subsection{Diseño}
+
+\subsection{Implementación}
 
 
 
