--- a/dissertation.tex
+++ b/dissertation.tex
@@ -179,6 +179,10 @@
 % introduction
 \include{1_introduction/0_index}	
 \include{1_introduction/1_motivation}	
+\include{1_introduction/2_resumen}	
+\include{1_introduction/3_marco_conceptual}	
+\include{1_introduction/4_objetivos_investigacion}	
+\include{1_introduction/5_metodologia}	
 
 %: ----------------------- related work ------------------------
 % introduction
@@ -191,6 +195,9 @@
 %: ----------------------- experiments and results ------------------------
 % introduction
 \include{4_experiments_and_results/0_index}	
+\include{4_experiments_and_results/1_lms}	
+\include{4_experiments_and_results/2_organizational}	
+\include{4_experiments_and_results/3_vw}	
 	
 %: ----------------------- conclusion ------------------------
 % introduction
