--- a/1_introduction/5_metodologia.tex
+++ b/1_introduction/5_metodologia.tex
@@ -1,3 +1,9 @@
 
 \section{Resumen de la metodología}
 \label{sec:ResumenMetodologia}
+
+Research strategic: Oates 2006
+- SLR
+- Cuestionario
+
+Ver tesis que me ha dejado Juanma
