--- a/3_overall_methodology/0_index.tex
+++ b/3_overall_methodology/0_index.tex
@@ -9,7 +9,7 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 \end{savequote}
 
 
-\chapter{Diseño y desarrollo de la metodología para la evaluación de competencias genéricas}
+\chapter{Metodología para la evaluación de competencias genéricas}
 \label{cha:Overall methodology}
 
 % the code below specifies where the figures are stored
@@ -24,32 +24,33 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 
 \cite{turing1950computing}
 
-Este capítulo presenta los requisitos, diseño y desarrollo de los sistemas empleados para guiar la evaluación de competencias genéricas: EvalCourse y EvalSim.
+\section{Como voy a evaluar}
 
-% Tengo que estudiar esta división. EvalCourse y EvalSim son DSLs para LMS y Mundos virtuales respectivamente. AMW es un sistema para escalar la evaluación del trabajo en Wikis mediante la peer y autoevaluación.
+Metolodogía mixta
 
-% Otra pata de la tesis era BISE. aplicado el DSL al organizational learning. Creo que las 3 patas son esas:
-% LMS
-% Mundos virtuales
-% Organizational Learning
+Cómo voy a evaluar roles, momentos, actividad, ... lo que sea.
 
-% AMW no es una pata como tal. ¿Se queda fuera por tanto?
-\section{EvalCourse}
+Explicar el DSL
 
-\subsection{Requisitos}
+DSL: herramienta de investigación en evaluaciones. Esta herramienta ayuda al investigador a formalizar la evaluación.
 
-\subsection{Diseño}
+Enfocar la metodología a que no es una metodología para evaluar, sino para diseñar evaluaciones. Diseñador de evaluaciones.
 
-\subsection{Implementación}
+Explicar qué pasos tiene que seguir un diseñador de evaluaciones para hacer sus evaluaciones.
 
-\section{EvalSim}
+Dentro de los resultados obtenemos dos cosas:
+1. Diseño
+2. Lo que el diseñador nos indicó que no pudo hacer
 
-\subsection{Requisitos}
+Para que esto sea posible falta la herramienta informática
 
-\subsection{Diseño}
+\section{Evolución herramientas}
 
-\subsection{Implementación}
+AMW --> EvalCourse --> EvalSim
 
+\section{Metodologia de desarrollo}
+
+DSL? Ing. Dirigida x modelo?
 
 
 
