--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -212,6 +212,26 @@ title = {{Challenges and Opportunities in Evaluating Learning in Serious Games: 
 year = {2012}
 }
 
+@article{judd:2010,
+  title={Using wikis for collaborative learning: Assessing collaboration through contribution},
+  author={Judd, Terry and KEnnEDY, Gregor and CRoPPER, Simon},
+  journal={Australasian Journal of Educational Technology},
+  volume={26},
+  number={3},
+  year={2010}
+}
+
+@article{jarmon:2009,
+  title={Virtual world teaching, experiential learning, and assessment: An interdisciplinary communication course in Second Life},
+  author={Jarmon, Leslie and Traphagan, Tomoko and Mayrath, Michael and Trivedi, Avani},
+  journal={Computers \& Education},
+  volume={53},
+  number={1},
+  pages={169--182},
+  year={2009},
+  publisher={Elsevier}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
