--- a/1_introduction/1_motivation.tex
+++ b/1_introduction/1_motivation.tex
@@ -4,9 +4,37 @@
 
 %------------------------------------------------------------------------- 
 
-\section{Motivation}
+\section{Motivación}
 \label{sec:Motivation}
 
-Este trabajo muestra el desarrollo de nuestra investigación para la evaluación del desempeño en la aplicación de  compentencias genéricas por parte de los estudiantes en su interacción con los diferentes entornos de aprendizaje virtual que se utilizan en la docencia. Por tanto, esta tesis se centra en la discusión sobre cómo la ingenieria dirigida por modelos nos puede ayudar a obtener los indicadores de dichos entornos de aprendizaje virtual.
+El papel de la universidad como institución impulsora de los cambios de todo tipo a los que la sociedad actual debe hacer frente es fundamental. En el contexto del Espacio Europeo de Educación Superior~\footnote{http://www.eees.es/} e influenciado por la situación actual de  la sociedad, sus instituciones sociales y políticas, la universidad se encuentra en el foco de las reformas para alcanzar la convergencia a nivel europeo. En este marco, son las competencias, las tareas y su evaluación los pilares en los que se basa el nuevo currículum universitario~\cite{zabala2005espacio}.
+
+Para que la empleabilidad de los nuevos graduados satisfaga las necesidades del mercado laboral europeo, las competencias juegan un papel fundamental~\cite{communique2012making}. Los nuevos graduados deben adquirir y demostrar competencias genéricas, además de dominar el conocimiento específico de la materia.
+
+Por tanto, en lo que a la evaluación se refiere, podemos decir que el foco de interés se centra ahora en cómo evaluar el desempeño de las competencias por parte del alumnado. Proyectos como el \emph{Tuning Educational Structures in Europe}, apoyado por el Lifelong Learning Program de la Unión Europea, muestran la importancia de utilizar el concepto de competencia como base para los resultados de aprendizaje. Las competencias de aprendizaje son habilidades que un alumno ha de ser capaz de demostrar una vez que termina su formación. Estas competencias de aprendizaje se dividen en dos grupos: específicas y genéricas. Competencias específicas son aquellas relacionadas directamente con la utilización de conceptos, teorías o habilidades propias de un área en concreto, mientras que las competencias genéricas son habilidades, capacidades y conocimientos que cualquier estudiante debería desarrollar independientemente de su área de estudio \cite{gonzalez2003tuning}. Aunque obviamente sigue siendo muy importante el desarrollo del conocimiento específico de cada área de estudio, es un hecho que el tiempo y la atención también deben dedicarse al desarrollo de las competencias genéricas. Igualmente es importante reconocer la aplicación de dichas habilidades genéricas fuera del ámbito académico, ya que son cada vez más relevantes para la preparación de estudiantes para su futuro papel en la sociedad, en términos de empleabilidad y ciudadanía.
+
+Sin embargo, evaluar ciertas competencias genéricas es a menudo una tarea bastante subjetiva. A menos que una competencia genérica esté directamente enlazada a una actividad específica, éstas son difíciles de evaluar. Desarrollar un procedimiento detallado para la evaluación en el desempeño de los estudiantes en las competencias genéricas es una actividad compleja y que requiere mucho tiempo por los diferentes aspectos a tener en cuenta. Si el profesor apenas tiene tiempo suficiente durante el curso académico para cumplir su planificación y evaluar todas las tareas, exámenes o trabajos que los alumnos han tenido que realizar para demostrar la adquisición de competencias específicas en una asignatura, difícilmente podrá asumir la carga adicional que supone una evaluación detallada, objetiva y justificada de determinadas competencias genéricas. Por lo que, aunque un alumno haya superado una asignatura, no siempre se podría garantizar que éste sea capaz de desempeñar las competencias genéricas recogidas en su plan de estudios.
+
+En los últimos años, han sido numerosos los avances en lo que al uso de las \emph{Tecnologías de la Información y la Comunicación} (TIC) se refiere. Esto, junto con el asentamiento de internet, ha traido consigo que la sociedad en casi todos sus ámbitos se haya visto obligada a abordar cambios en su habitual modo de trabajo. Desde la manera en que los ciudadanos interactúan con las instituciones públicas hasta la forma en que estos se relacionan con sus amigos. Y por supuesto, también ha afectado a la educación. El aprendizaje mejorado por la tecnología (TEL, del inglés \emph{Technology Enhanced Learning}), es el campo de investigación que aborda el uso de la tecnología como parte del proceso de aprendizaje. Herramientas como los cursos virtuales, las wikis o los mundos virtuales son más que habituales como soporte a la docencia presencial o en algunos casos, incluso como alternativa.
+
+\begin{itemize}
+\item \textbf{Cursos virtuales}: conocidos como \emph{LMS} o \emph{VLE} (\emph{LMS}, \emph{Learning Management System} y \emph{VLE}, \emph{Virtual Learning Environment}). Los entornos LMS o VLE pueden ser tanto entornos monolíticos y holísticos donde se desarrollan y gestionan experiencias virtuales, como ser un entorno basado en las tecnologías semánticas y \emph{linked data}, y estar constituidos por una miríada de herramientas, plataformas y servicios independientes \cite{Dodero:2013}. Estos entornos están diseñados especialmente para incluir no sólo actividades individuales, sino también actividades colaborativas como foros o wikis. Todos ellos son muy empleados como soporte para clases presenciales, haciendo más fácil la comunicación con los estudiantes y manteniendo siempre disponibles las actividades y recursos para el tema \cite{Zafra:2011, Munkhchimeg:2013}.
+\item \textbf{Wikis}: un wiki es un tipo de página web que permite que varios usuarios puedan editar su contenido mediante el navegador web. Los wikis son considerados como herramienta de trabajo colaborativa y han ganado mucha popularidad en entornos académicos~\cite{judd:2010}.
+\item \textbf{Mundos virtuales}:  un mundo virtual es un tipo de comunidad virtual en línea que simula un mundo o entorno artificial inspirado o no en la realidad, en el cual los usuarios pueden interactuar entre sí a través de personajes o avatares, y usar objetos o bienes virtuales [Wikipedia]. Son numerosos los beneficios que tanto para la enseñanza como para el aprendizaje proporcionan los mundos virtuales~\cite{jarmon:2009}. Este tipo de aprendizaje se engloba dentro del campo conocido como \emph{Aprendizaje basado en juegos} (GBL, del inglés \emph{Game-based learning}). Los juegos son ampliamente utilizados hoy en día por los centros educativos a todos los niveles, facilitando la descontextualización y fomentando en muchos casos una motivación extra del estudiante mediante un juego con un posible componente competitivo \cite{Bellotti:2013,Berns:2013,Palomo-Duarte:2012}.
+\end{itemize}
+
+Cómo el lector ha podido ver, las TIC ofrecen muchas oportunidades para el apoyo a los formatos de evaluación que pueden capturar habilidades complejas y competencias que son difíciles de evaluar \cite{Redecker:2013}. Si los planes de estudio y los objetivos de aprendizaje han cambiado, también deberían hacerlo las prácticas de evaluación \cite{Cachia:2011}.
+
+En las herramientas informáticas utilizadas como apoyo a la docencia la interacción de los estudiantes queda registrada en el sistema. Según \cite{Chebil:2012, Florian:2011} la recopilación de los rastros de interacción producidos por estas herramientas, con un filtrado adecuado, puede ser una información muy valiosa para obtener indicadores del desempeño de los alumnos en competencias genéricas. ¿Cómo interactúan? ¿Cuándo lo hacen? ¿Con qué frecuencia consultan los recursos? Son preguntas cuyas respuestas podrian utilizarse como indicadores de competencias genéricas.
+
+Aunque el profesor pudiera acceder a esta información, si el número de alumnos es elevado, su análisis se hace inescalable para el profesor. Por ejemplo, este tipo de situaciones se suele dar en los cursos virtuales masivos (MOOCs, \emph{Massive Open Online Courses}), cuya filosofía es la liberación del conocimiento, para que este llegue a un público más amplio, y para el que se suelen ofrecer plazas ilimitadas \cite{Lugton:2012, Mor:2013}. Este tipo de curso, que también se caracteriza por ser de carácter abierto y gratuito, y con materiales accesibles de forma gratuita, presenta evidentes problemas de escalabilidad cuando la evaluación no está automatizada \cite{Johnson:2013}.
+
+Por todo esto, existe la necesidad para el profesor de obtener de manera automática los registros que considere necesario para la evaluación de competencias genéricas. El profesor debería ser capaz de diseñar sus propias fórmulas de evaluación para diseñar su evaluación.
+
+%Este trabajo comienza con un análisis de la literatura para conocer hasta qué punto la ciencia informática se ha ocupado de la evaluación de competencias genéricas, prestando especial atención en aquellos trabajos que realicen dicha evaluación de manera automatizada aprovechando las prestaciones de las nuevas tecnologías. Consideramos que la información almacenada en la base de datos de un LMS puede ser aprovechada para extraer indicadores que proporcionen una medida objetiva del desempeño de los alumnos en ciertas competencias genéricas. ¿Cuántos trabajos han tratado esta problemática anteriormente? ¿Qué competencias pueden ser evaluadas de manera automática? Todas estas dudas, serán planteadas de manera formal en en el siguiente capítulo, dónde se darán las indicaciones de la metodología seguida. A continuación se mostrarán los resultados, las respuestas a las preguntas, el trabajo futuro y por último las conclusiones y la bibliografía utilizada.
+
+%Para este trabajo vamos a utilizar un DSL para recoger evidencias que podamos utilizar para la evaluación de competencias.
+
+%Este trabajo muestra el desarrollo de nuestra investigación para la evaluación del desempeño en la aplicación de  compentencias genéricas por parte de los estudiantes en su interacción con los diferentes entornos de aprendizaje virtual que se utilizan en la docencia. Por tanto, esta tesis se centra en la discusión sobre cómo la ingenieria dirigida por modelos nos puede ayudar a obtener los indicadores de dichos entornos de aprendizaje virtual.
 
 
