Notas reunion con tutores

--- a/1_introduction/2_objetivos.tex
+++ b/1_introduction/2_objetivos.tex
@@ -2,13 +2,13 @@
 \section{Objetivos y preguntas de investigación}
 \label{sec:objetivos}
 
-El principal objetivo de esta tesis es demostrar que:
+El principal objetivo de esta tesis es:
 
 \bigskip
 \textbf{Evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje}
 \bigskip
 
-Para alcanzar dicho objetivo, es necesario primero responder a diferentes preguntas de investigación. Para dar respuesta a las mismas se llevará a cabo una Revisión Sistemática de la Literatura (SLR, Systematic Literature Review). Las preguntas de investigación a las que se tratará de dar respuesta son las siguientes:
+Para alcanzar dicho objetivo, es necesario primero responder a diferentes preguntas de investigación. Para dar respuesta a las mismas se llevará a cabo una \emph{Revisión Sistemática de la Literatura} (SLR, Systematic Literature Review). Las preguntas de investigación a las que se tratará de dar respuesta son las siguientes:
 
 \bigskip
 \textbf{Q1. ¿Cuáles son las competencias que se han evaluado de forma automática o asistida por ordenador a partir del uso de los entornos virtuales?}
@@ -20,11 +20,23 @@ Hay muchos trabajos en la literatura que abordan la evaluación de competencias 
 \textbf{Q2. ¿Qué herramientas o metodologías se utilizan para evaluar competencias mediante el uso de los entornos virtuales?}
 \bigskip
 
+% Quitar metodlogía?
+% ¿Qué método se utilizan para evaluar competencias? En la respuesta dejar en evidencia que los métodos basados en indicadores no abundan 
+
+
 Analizaremos las herramientas que se utilizan para facilitar a los docentes la evaluación de las competencias genéricas de sus alumnos.
 
 \bigskip
-\textbf{Q3. ¿Con qué técnicas se pueden obtener evidencias objetivas del desarrollo de las siguientes competencias en un entorno virtual?}
+\textbf{Q3. ¿Con qué técnicas informáticas se obtienen evidencias objetivas del {desarrollo} de las siguientes competencias en un entorno virtual?}
 \bigskip
+
+% tec. informatics automatizasas ...
+
+% métodos, técnicas y herramientas (de mayor a menor nivel de abstracción)
+
+% ¿Qué técnicas utilizan los métodos basados en evidencias?
+
+% Referencia Fran
 
 Se analizaran las técnicas empleadas para obtener las evidencias o indicadores objetivos de los entornos de aprendizaje virtual.
 
@@ -32,9 +44,12 @@ Se analizaran las técnicas empleadas para obtener las evidencias o indicadores 
 \textbf{Q4. ¿Son utilizados los registros de actividad de los entornos virtuales para la evaluación?}
 \bigskip
 
+% Poner esta antes de la tercera
+
 Prestaremos especial atención a aquellos trabajos que hagan uso de los registros de actividad o logs de los entornos de aprendizaje virtual.
 
-A partir de aquí el objetivo de esta investigación será proveer a los diseñadores de evaluación de un lenguaje para obtener de manera automatizada un conjunto de indicadores entre los que elegir para ir aplicándolos a sus procesos de evaluación segun las competencias genéricas que quieran evaluar. Esto se divide en los siguientes dos objetivos:
+\bigskip
+A partir de aquí el objetivo de esta investigación será proveer a los diseñadores de evaluaciones de un lenguaje para obtener de manera automatizada un conjunto de indicadores entre los que elegir para ir aplicándolos a sus procesos de evaluación segun las competencias genéricas que quieran evaluar. Esto se divide en los siguientes dos objetivos:
  
 \bigskip
 \textbf{O1. Definir un conjunto de indicadores susceptibles de ser obtenidos de los entornos de aprendiaje virtual para evaluar a los estudiantes en el desempeño de sus competencias genéricas}
@@ -42,8 +57,29 @@ A partir de aquí el objetivo de esta investigación será proveer a los diseña
 
 Analizaremos las herramientas que se utilizan para facilitar a los docentes la evaluación de las competencias genéricas de sus alumnos.
 
+2. Un objetivo de informática y automatización.  Ejecución. Pero los indidcadores viene ya predefinidos, incluida la manera de obtenerlos. Construcción de AMW.
+
+Aquí la evaluación ya está diseñada.
+
+3. Permite automatizar y diseñar. Construir DSL: automatiza el diseño de la evaluación
+
+Lo anterior no es suficiente porque la manera de evaluar no es simepre la misma. El profesor necesitaría una herramienta de diseño pars saber que laevaluación va a ser de una forma u otra. Para esto necesita el DSL.
+
+LA EVALUACIÓN NO ES UN OBJETIVO.
+
+EN EL CAPÍTULO DE EVALUACIÓN HABRÁ QUE DEFINIR OBJETIVOS DE EVALUACIÓN Y MAPEARLO CON LOS OBJETIVOS ANTERIORES. tENDRÉ QUE HACER UN CUADRO PARA EL MAPEO.
+
 \bigskip
-\textbf{O2. Evaluar la idoneidad de dichos indicadores en un escenario completamente real}
+%\textbf{O2. Evaluar los indicadores en escenarios reales de aprendizaje basados en competencias con soporte de un VLE}
 \bigskip
 
-Además, para proponer una serie de recomendaciones estos indicadores seran evaluados por docentes miembros de la comunidad UCA. Finalmente, tres herramientas fueron desarrolladas para obtener los indicadores sugeridos en esta tesis: \emph{AssessMediaWiki} para obtener indicadores procedentes de una wiki basada en MediaWiki; \emph{EvalCourse}, Un Lenguaje Específico de Dominio para obtener indicadores procedentes de los registros de la plataforma de cursos virtuales Moodle; y \emph{EvalSim}, un Lenguaje Específico de Dominio para obtener indicadores procedentes de los registros de un mundo virtual basado en OpenSim.
+Además, para proponer una serie de recomendaciones estos indicadores seran evaluados por docentes miembros de la comunidad UCA. Desarrollamos tres herramientas para obtener los indicadores sugeridos en esta tesis: \emph{AssessMediaWiki} para obtener indicadores procedentes de una wiki basada en MediaWiki; \emph{EvalCourse}, Un Lenguaje Específico de Dominio para obtener indicadores procedentes de los registros de la plataforma de cursos virtuales Moodle; y \emph{EvalSim}, un Lenguaje Específico de Dominio para obtener indicadores procedentes de los registros de un mundo virtual basado en OpenSim.
+
+
+-------------------
+
+Estrategia para la investigación realizada en los 3 objetivos.
+
+En el tercer objetivo: ¿Cómo evaluar DSL?
+
+Jordi Cabot había esceitro algo sobre evaluación de DSL
