--- a/1_introduction/4_estrategia.tex
+++ b/1_introduction/4_estrategia.tex
@@ -26,10 +26,14 @@ Como se comentó al principio, el objetivo y contribución más importante de es
 
 Para poder validar los indicadores y permitir a los docentes diseñar sus evaluaciones debemos construir las herramientas apropiadas. Por ello, esta tesis incluye el desarrollo de dichas aplicaciones.  En este sentido, la estrategia de investigación de diseño y creación seguida se puede definir de la siguiente manera:
 
+\bigskip
 \textbf{Combinación de una metodología de desarrollo de sistemas y una metodologia de investigación basada en una o más estregias de investigación que utilizan uno o varios métodos de generación de datos (Oates, 2006, Capítulo 8).}
+\bigskip
 
-Por un lado encuestas para obtener datos
 
-Por otro lado crear el software
+En cuanto a la metodología de investigación de esta tesis: cuestionarios? Entrevistas? ... Ver Oates.
+
+\bigskip
+En cuanto a la metodología de desarrollo de sistemas ...
 
 \subsection{Esquema de la estrategia de investigación}
